--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
             </nav>
         </header>
-        <main>
+        <main id="main">
             
         </main>
         <footer class="navbar fixed-bottom">
